src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountReferenceBackground__c</fullName>
        <displayFormat>{000000000}</displayFormat>
        <label>Account Reference (Background)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AccountReferenceHelper__c</fullName>
        <formula>value(MID(AccountReferenceBackground__c,9,1)) + 
value(MID(AccountReferenceBackground__c,8,1)) * 2 + 
value(MID(AccountReferenceBackground__c,7,1)) * 5 + 
value(MID(AccountReferenceBackground__c,6,1)) * 3 + 
value(MID(AccountReferenceBackground__c,5,1)) * 6 + 
value(MID(AccountReferenceBackground__c,4,1)) * 4 + 
value(MID(AccountReferenceBackground__c,3,1)) * 8 + 
value(MID(AccountReferenceBackground__c,2,1)) * 7 + 
value(MID(AccountReferenceBackground__c,1,1)) * 10</formula>
        <label>Account Reference Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountReferenceValidation__c</fullName>
        <formula>CASE(11 - (AccountReferenceHelper__c - (floor(AccountReferenceHelper__c / 11) * 11)), 
1, 1, 
2, 2, 
3, 3, 
4, 4, 
5, 5, 
6, 6, 
7, 7, 
8, 8, 
9, 9, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Reference Validation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountReference__c</fullName>
        <formula>AccountReferenceBackground__c&amp;TEXT(AccountReferenceValidation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountReferencetemp__c</fullName>
        <externalId>true</externalId>
        <label>Account Reference(temp)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BirthDate__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConsiderationPassword__c</fullName>
        <inlineHelpText>Customer’s own password for Special Needs</inlineHelpText>
        <label>Consideration Password</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasConsideration__c</fullName>
        <description>Has Consideration? = True if the count of considerations is greater than 0</description>
        <formula>IF(NumberofConsiderations__c &gt; 0,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Consideration?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeyAccountManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MailOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies whether the customer can receive inserts along with there bill e.g. Home serve marketing
Can&apos;t make checkbox mandatory. If have to make the field mandatory and have the user make a decision, can make is Yes/No picklist.</description>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfActiveLocationOccupants__c</fullName>
        <label>Number Of Active Location Occupants</label>
        <summaryFilterItems>
            <field>LocationOccupant__c.ActiveBackground__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LocationOccupant__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofConsiderations__c</fullName>
        <label>Number of Considerations</label>
        <summaryForeignKey>Consideration__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreferredContactMethod__c</fullName>
        <description>Clients can edit/add more picklist values during implementation.</description>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SICCode2__c</fullName>
        <description>Vat Class 2 is used to store a lower level of VAT classification detail.</description>
        <label>SIC Code2</label>
        <picklist>
            <controllingField>SICCode__c</controllingField>
            <picklistValues>
                <fullName>000 Diplomatic Representation, International Organisations, Allied Armed Forces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>001 Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>010 Agriculture and Horticulture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>020 Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>030 Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>111 Coal Extraction and Manufacture of Solid Fuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 Coke Ovens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130 Extraction of Mineral Oil and Natural Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140 Mineral Oil Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>152 Nuclear Fuel Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>161 Production and Distribution of Electricity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>162 Public Gas Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>163 Production and Distribution of Other Forms of Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170 Water Supply Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210 Extraction and Preparation of Metalliferous Ores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>221 Iron and Steel Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>222 Steel Tubes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>223 Drawing, Cold Rolling and Cold Forming of Steel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>224 Non-Ferrous Metals Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>231 Extraction of Stone, Clay, Sand and Gravel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>239 Extraction of Other Minerals Not Elsewhere Specified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>241 Structural Clay Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>242 Cement, Lime and Plaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>243 Building Products of Concrete, Cement or Plaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>244 Asbestos Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>245 Working of Stone and Other Non-Metallic Minerals Not Elsewhere Specified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>246 Abrasive Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>247 Glass and Glassware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>248 Refractory and Ceramic Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251 Basic Industrial Chemicals</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <description>VAT class is currently used in the UK to determine if a customer is vatable and the classification at a  high level.</description>
        <label>SIC Code</label>
        <picklist>
            <picklistValues>
                <fullName>0 Agriculture/Forestry &amp; Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Energy &amp; Water Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Extraction of Minerals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Metal Goods &amp; Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Other Manufacturing Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Distribution/Hotel/Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Transport &amp; Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 Banking/Finance/Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 Other Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x - Zero VAT Rate - Unknown Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>z - Standard VAT Rate - Unknown Industry</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShowOnBill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show On Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocialRate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status Updates based on Number of Active Location Occupants and Total Ledger Amount</description>
        <formula>IF(AND(TotalLedgerAmount__c&gt;0,NumberOfActiveLocationOccupants__c=0),&apos;Inactive (with Debt)&apos;,
 IF(AND(TotalLedgerAmount__c&lt;0,NumberOfActiveLocationOccupants__c=0),&apos;Inactive (with Credit)&apos;,
 IF(AND(TotalLedgerAmount__c=0,NumberOfActiveLocationOccupants__c=0),&apos;Inactive&apos;,&apos;Active&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StopRecursion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created to control recursion of process builder to update HH account from contact.</description>
        <label>Stop Recursion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suppressed_Formula__c</fullName>
        <formula>IF( Suppressed__c,IMAGE(&quot;/resource/RedIndicator&quot;, &quot;Red&quot; , 50, 50),IMAGE(&quot;/resource/GRAYINDICATOR&quot;, &quot;Gray&quot; , 50, 50))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suppressed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppressed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppressed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalLedgerAmount__c</fullName>
        <description>Roll-up to calculate the total ledger amount on the customer</description>
        <label>Total Ledger Amount</label>
        <summarizedField>Ledger__c.Amount__c</summarizedField>
        <summaryForeignKey>Ledger__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VATRegistrationNumber__c</fullName>
        <label>VAT Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllHHAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.HouseholdAccount</value>
        </filters>
        <label>All Household Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_NHH_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AccountReference__c</columns>
        <columns>Status__c</columns>
        <columns>Key_Account__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.NonHouseholdAccount</value>
        </filters>
        <label>All Non-Household Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>GeneralAccount</fullName>
        <active>true</active>
        <label>General Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>HouseholdAccount</fullName>
        <active>true</active>
        <label>Household Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>NonHouseholdAccount</fullName>
        <active>true</active>
        <label>Non-Household Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AccountBillingAddressMandatory</fullName>
        <active>false</active>
        <description>Account Billing Address should be manadatory.</description>
        <errorConditionFormula>OR(
    ISBLANK(BillingStreet),
    ISBLANK(BillingCity),
    ISBLANK(BillingState),
    ISBLANK(BillingCountry),
    ISBLANK(BillingPostalCode)
  )</errorConditionFormula>
        <errorMessage>Please enter the complete Billing Address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccountShippingAddressMandatory</fullName>
        <active>false</active>
        <description>Shipping address field must be filled.</description>
        <errorConditionFormula>OR( 
ISBLANK( ShippingStreet ), 
ISBLANK( ShippingCity ), 
ISBLANK( ShippingState ), 
ISBLANK( ShippingCountry ), 
ISBLANK( ShippingPostalCode ) 
)</errorConditionFormula>
        <errorMessage>Please enter the complete Shipping Address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HHAccountNameCannotBeUpdated</fullName>
        <active>true</active>
        <description>Validation rule to prevent users from updating HH Account Name manually.</description>
        <errorConditionFormula>IF( AND(RecordType.DeveloperName  = $Label.CuAp_AccountRecordTypeHouseholdAccountDevName,NOT(ISBLANK(Name)),NOT(ISNEW()),ISCHANGED(Name),NOT( StopRecursion__c )),true,false)</errorConditionFormula>
        <errorMessage>Name of Household Account cannot be updated directly. Please update related household contact&apos;s name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Key_Account_Manager_Cannot_be_Blank</fullName>
        <active>true</active>
        <description>Key Account Manager cannot be blank if it is a Key Account.</description>
        <errorConditionFormula>Key_Account__c = TRUE &amp;&amp; ISBLANK(KeyAccountManager__c  )</errorConditionFormula>
        <errorDisplayField>KeyAccountManager__c</errorDisplayField>
        <errorMessage>Key Account Manager cannot be blank if it is a Key Account.</errorMessage>
    </validationRules>
</CustomObject>